landing image updated

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
       <h4>Contact Us</h4>
     </header>
 
-    <article id="landing-img">
-        
+    <article id="landing">
+      <div id="text-box"></div>
+      <div id="welcome-text">
+        <h1 id="welcome">Welcome to Greece</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <button>Lorem</button>
+      </div>
     </article>
   </body>
 </html>
