--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
       <div id="welcome-text">
         <h1 id="welcome">Welcome to Greece</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <button>Lorem</button>
+        <button>Lorem ipsum</button>
       </div>
     </article>
+    
+    <article id="landing2">
+        <h3 id="landing2-title">Popular Attractions</h3>
+        <div id="popular-container">
+            <div class="ladning2-item"></div>
+            <div class="landing2-item"></div>
+            <div class="landing2-item"></div>
+        </div>
+    </article>
+   
+        
   </body>
 </html>
