new landing style

--- a/index.html
+++ b/index.html
@@ -17,23 +17,29 @@
     </header>
 
     <article id="landing">
-      <div id="text-box"></div>
-      <div id="welcome-text">
-        <h1 id="welcome">Welcome to Greece</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <button>Lorem ipsum</button>
+      <div id="landing-text">
+        <h1>Welcome to Greece</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe at
+          amet, excepturi soluta minima voluptatum laborum voluptatem, facilis
+          ipsum labore.
+        </p>
+        <button id="landing-btn">Lorem ipsum</button>
+      </div>
+      <img
+        id="landing-img"
+        src="images/landingIMG.jpg"
+        alt="overview of Greece"
+      />
+    </article>
+
+    <article id="landing2">
+      <h3 id="landing2-title">Popular Attractions</h3>
+      <div id="popular-container">
+        <div class="ladning2-item"></div>
+        <div class="landing2-item"></div>
+        <div class="landing2-item"></div>
       </div>
     </article>
-    
-    <article id="landing2">
-        <h3 id="landing2-title">Popular Attractions</h3>
-        <div id="popular-container">
-            <div class="ladning2-item"></div>
-            <div class="landing2-item"></div>
-            <div class="landing2-item"></div>
-        </div>
-    </article>
-   
-        
   </body>
 </html>
