added second landing part and footer

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 
     <article id="landing">
       <div id="landing-text">
-        <h1>Welcome to Greece</h1>
+        <h1 id="landing-title">Welcome to Greece</h1>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe at
-          amet, excepturi soluta minima voluptatum laborum voluptatem, facilis
-          ipsum labore.
+          amet, excepturi soluta minima voluptatum.
         </p>
         <button id="landing-btn">Lorem ipsum</button>
       </div>
@@ -33,13 +32,81 @@
       />
     </article>
 
+    <hr style="width: 86%" />
+
     <article id="landing2">
       <h3 id="landing2-title">Popular Attractions</h3>
       <div id="popular-container">
-        <div class="ladning2-item"></div>
-        <div class="landing2-item"></div>
-        <div class="landing2-item"></div>
+        <div class="landing2-item">
+          <img
+            class="landing2-img"
+            src="images/item1.jpg"
+            alt="Greek architecture"
+          />
+          <div class="landing2-text">
+            <h2 class="landing2-title">Accusamus Ullam</h2>
+            <p class="landing2-p">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam
+              nihil natus aliquid non vel repellat esse! Recusandae dolorum,
+              quis cum beatae laboriosam eligendi, eveniet inventore unde alias
+              voluptatibus enim ipsam! Minus, molestiae nam perferendis
+              provident accusantium id velit maiores veniam suscipit doloremque
+              accusamus ullam earum! Nesciunt perspiciatis quo veniam porro
+              dolores? Fuga reprehenderit similique quam excepturi ipsa vero
+              temporibus praesentium!
+            </p>
+          </div>
+        </div>
+        <div class="landing2-item">
+          <img
+            class="landing2-img"
+            src="images/item2.jpg"
+            alt="Greek architecture"
+          />
+          <div class="landing2-text">
+            <h2 class="landing2-title">Voluptatibus Enim Ipsam</h2>
+            <p class="landing2-p">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam
+              nihil natus aliquid non vel repellat esse! Recusandae dolorum,
+              quis cum beatae laboriosam eligendi, eveniet inventore unde alias
+              voluptatibus enim ipsam! Minus, molestiae nam perferendis
+              provident accusantium id velit maiores veniam suscipit doloremque
+              accusamus ullam earum! Nesciunt perspiciatis quo veniam porro
+              dolores? Fuga reprehenderit similique quam excepturi ipsa vero
+              temporibus praesentium!
+            </p>
+          </div>
+        </div>
+        <div class="landing2-item">
+          <img 
+            class="landing2-img" 
+            src="images/item3.jpg" 
+            alt="Greek beach" 
+            />
+          <div class="landing2-text">
+            <h2 class="landing2-title">Molestiae Nam Perferendis</h2>
+            <p class="landing2-p">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam
+              nihil natus aliquid non vel repellat esse! Recusandae dolorum,
+              quis cum beatae laboriosam eligendi, eveniet inventore unde alias
+              voluptatibus enim ipsam! Minus, molestiae nam perferendis
+              provident accusantium id velit maiores veniam suscipit doloremque
+              accusamus ullam earum! Nesciunt perspiciatis quo veniam porro
+              dolores? Fuga reprehenderit similique quam excepturi ipsa vero
+              temporibus praesentium!
+            </p>
+          </div>
+        </div>
       </div>
     </article>
+
+    <hr style="width: 86%" />
+
+    <footer>
+        <h4>E-mail</h4>
+        <h4>Facebook</h4>
+        <h4>Instagram</h4>
+        <h4>Tik-Tok</h4>
+    </footer>
   </body>
 </html>
