updated visuals and added media query 992px

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </p>
           </div>
         </div>
-        <div class="landing2-item">
+        <div class="landing2-item" id="landing2-item3">
           <img 
             class="landing2-img" 
             src="images/item3.jpg" 
