added html pages, styled anchor tags to html files

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <header>
       <h2>Lorem Ipsum</h2>
-      <h4>Home</h4>
-      <h4>About Us</h4>
-      <h4>Reviews</h4>
-      <h4>Contact Us</h4>
+      <a href="index.html">Home</a>
+      <a href="pages/aboutus.html">About Us</a>
+      <a href="pages/reviews.html">Reviews</a>
+      <a href="pages/contactus.html">Contact Us</a>
     </header>
 
     <article id="landing">
