about us page finsihed + media query adjusted

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -16,17 +16,31 @@
       <a href="pages/contactus.html">Contact Us</a>
     </header>
 
-    <article>
-        <img id="greek-statue"src="../images/aboutus.jpg" alt="greek statue">
+    <article id="aboutUs-article">
+      <h2 id="aboutUs-title">About Us</h2>
+      <div id="aboutUs-container">
+        <img id="greek-statue" src="../images/aboutus.jpg" alt="greek statue" />
+        <p id="caption">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus
+          aspernatur repudiandae magni amet fugit! Ab quisquam explicabo nisi
+          eum debitis quis, accusantium nesciunt consequatur perspiciatis
+          facilis illo optio harum quas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus
+          aspernatur repudiandae magni amet fugit! Ab quisquam explicabo nisi
+          eum debitis quis, accusantium nesciunt consequatur perspiciatis
+          facilis illo optio harum quas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus
+          aspernatur repudiandae magni amet fugit! Ab quisquam explicabo nisi
+          eum debitis quis, accusantium.
+        </p>
+      </div>
     </article>
 
     <hr style="width: 86%" />
 
     <footer>
-        <h4>E-mail</h4>
-        <h4>Facebook</h4>
-        <h4>Instagram</h4>
-        <h4>Tik-Tok</h4>
+      <h4>E-mail</h4>
+      <h4>Facebook</h4>
+      <h4>Instagram</h4>
+      <h4>Tik-Tok</h4>
     </footer>
   </body>
 </html>
