5 star review rating updated

--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
     <link rel="stylesheet" href="../style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <header>
@@ -15,14 +19,46 @@
       <a href="reviews.html">Reviews</a>
       <a href="contactus.html">Contact Us</a>
     </header>
-    
+
+    <h4 id="star-caption">Tourist Reviews</h4>
+    <article id="review-stars">
+      <span class="fa fa-star checked fa-2x"></span>
+      <span class="fa fa-star checked fa-2x"></span>
+      <span class="fa fa-star checked fa-2x"></span>
+      <span class="fa fa-star checked fa-2x"></span>
+      <span class="fa fa-star checked fa-2x"></span>
+    </article>
+    <hr style="width: 86%" />
+
+    <article id="reviews">
+      <div id="review-card">
+        <div class="review-pfp"></div>
+        <div class="customer-review">
+          <h5>Name</h5>
+          <article id="customer-stars">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </article>
+          <p>
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Dignissimos cum sint omnis dolore eos reprehenderit quas, facilis,
+            molestiae distinctio laborum nobis aspernatur, quasi rem nemo!
+            Itaque corrupti minima magni voluptatem!"
+          </p>
+        </div>
+      </div>
+    </article>
+
     <hr style="width: 86%" />
 
     <footer>
-        <h4>E-mail</h4>
-        <h4>Facebook</h4>
-        <h4>Instagram</h4>
-        <h4>Tik-Tok</h4>
+      <h4>E-mail</h4>
+      <h4>Facebook</h4>
+      <h4>Instagram</h4>
+      <h4>Tik-Tok</h4>
     </footer>
   </body>
 </html>
