review page complete

--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -31,10 +31,16 @@
     <hr style="width: 86%" />
 
     <article id="reviews">
-      <div id="review-card">
-        <div class="review-pfp"></div>
+      <div class="review-card">
+        <div class="review-pfp">
+          <img
+            class="pfp"
+            src="../images/pfp1.jpg"
+            alt="profile picture of girl smiling"
+          />
+        </div>
         <div class="customer-review">
-          <h5>Name</h5>
+          <h4>Name 1</h4>
           <article id="customer-stars">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -42,7 +48,7 @@
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
           </article>
-          <p>
+          <p class="review-text">
             "Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Dignissimos cum sint omnis dolore eos reprehenderit quas, facilis,
             molestiae distinctio laborum nobis aspernatur, quasi rem nemo!
@@ -50,6 +56,116 @@
           </p>
         </div>
       </div>
+      <hr style="width: 80%" />
+
+      <div class="review-card">
+        <div class="review-pfp">
+          <img
+            class="pfp"
+            src="../images/pfp2.jpg"
+            alt="profile picture of girl smiling"
+          />
+        </div>
+        <div class="customer-review">
+          <h4>Name 2</h4>
+          <article id="customer-stars">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </article>
+          <p class="review-text">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Dignissimos cum sint omnis dolore eos reprehenderit quas, facilis,
+            molestiae distinctio laborum nobis aspernatur, quasi rem nemo!
+            Itaque corrupti minima magni voluptatem!"
+          </p>
+        </div>
+      </div>
+      <hr style="width: 80%" />
+
+      <div class="review-card">
+        <div class="review-pfp">
+          <img
+            class="pfp"
+            src="../images/pfp3.jpg"
+            alt="profile picture of girl smiling"
+          />
+        </div>
+        <div class="customer-review">
+          <h4>Name 3</h4>
+          <article id="customer-stars">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </article>
+          <p class="review-text">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Dignissimos cum sint omnis dolore eos reprehenderit quas, facilis,
+            molestiae distinctio laborum nobis aspernatur, quasi rem nemo!
+            Itaque corrupti minima magni voluptatem!"
+          </p>
+        </div>
+      </div>
+      <hr style="width: 80%" />
+
+      <div class="review-card">
+        <div class="review-pfp">
+          <img
+            class="pfp"
+            src="../images/pfp4.jpg"
+            alt="profile picture of girl smiling"
+          />
+        </div>
+        <div class="customer-review">
+          <h4>Name 4</h4>
+          <article id="customer-stars">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </article>
+          <p class="review-text">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Dignissimos cum sint omnis dolore eos reprehenderit quas, facilis,
+            molestiae distinctio laborum nobis aspernatur, quasi rem nemo!
+            Itaque corrupti minima magni voluptatem!"
+          </p>
+        </div>
+      </div>
+      <hr style="width: 80%" />
+
+      <div class="review-card">
+        <div class="review-pfp">
+          <img
+            class="pfp"
+            src="../images/pfp5.jpg"
+            alt="profile picture of girl smiling"
+          />
+        </div>
+        <div class="customer-review">
+          <h4>Name 4</h4>
+          <article id="customer-stars">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </article>
+          <p class="review-text">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Dignissimos cum sint omnis dolore eos reprehenderit quas, facilis,
+            molestiae distinctio laborum nobis aspernatur, quasi rem nemo!
+            Itaque corrupti minima magni voluptatem!"
+          </p>
+        </div>
+      </div>
+      <hr style="width: 80%" />
+      
     </article>
 
     <hr style="width: 86%" />
