fixed pages paths

--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -11,9 +11,9 @@
     <header>
       <h2>Lorem Ipsum</h2>
       <a href="../index.html">Home</a>
-      <a href="pages/aboutus.html">About Us</a>
-      <a href="pages/reviews.html">Reviews</a>
-      <a href="pages/contactus.html">Contact Us</a>
+      <a href="aboutus.html">About Us</a>
+      <a href="reviews.html">Reviews</a>
+      <a href="contactus.html">Contact Us</a>
     </header>
     
     <hr style="width: 86%" />
