raw contact page completed

--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -15,14 +15,42 @@
       <a href="reviews.html">Reviews</a>
       <a href="contactus.html">Contact Us</a>
     </header>
-    
+
+    <h4 id="contact-title">Contact Us</h4>
+    <h3 class="contact-title-caption">Questions or Concerns?</h3>
+    <h3 class="contact-title-caption">We'd to love to keep in touch!</h3>
     <hr style="width: 86%" />
 
+    <section id="contact-landing">
+      <div id="contact-info">
+        <div id="contact-icon">
+          <span>location</span>
+          <span>phone</span>
+          <span>email</span>
+        </div>
+        <div id="contact-icon-info">
+          <p>some address</p>
+          <p>+1(800)000-0000</p>
+          <p>some-email@email.com</p>
+        </div>
+      </div>
+    </section>
+    <hr style="width: 86%" />
+    <form id="contact-form">
+      <label for="name">Name:</label><br />
+      <input type="text" id="name" name="name" /><br />
+      <label for="e-mail">E-mail:</label><br />
+      <input type="text" id="e-mail" name="e-mail" /><br />
+      <label for="message">Message:</label><br />
+      <input type="text" id="message" name="message" /><br />
+      <input type="submit" value="Submit" />
+    </form>
+    <hr style="width: 86%" />
     <footer>
-        <h4>E-mail</h4>
-        <h4>Facebook</h4>
-        <h4>Instagram</h4>
-        <h4>Tik-Tok</h4>
+      <h4>E-mail</h4>
+      <h4>Facebook</h4>
+      <h4>Instagram</h4>
+      <h4>Tik-Tok</h4>
     </footer>
   </body>
 </html>
