articles changed to section tags

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="pages/contactus.html">Contact Us</a>
     </header>
 
-    <article id="landing">
+    <section id="landing">
       <div id="landing-text">
         <h1 id="landing-title">Welcome to Greece</h1>
         <p>
@@ -30,11 +30,11 @@
         src="images/landingIMG.jpg"
         alt="overview of Greece"
       />
-    </article>
+    </section>
 
     <hr style="width: 86%" />
 
-    <article id="landing2">
+    <section id="landing2">
       <h3 id="landing2-title">Popular Attractions</h3>
       <div id="popular-container">
         <div class="landing2-item">
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-    </article>
+    </section>
 
     <hr style="width: 86%" />
 
