--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -16,9 +16,9 @@
       <a href="contactus.html">Contact Us</a>
     </header>
 
-    <article id="aboutUs-article">
+    <section id="aboutUs-article">
       <h2 id="aboutUs-title">About Us</h2>
-      <div id="aboutUs-container">
+      <article id="aboutUs-container">
         <img id="greek-statue" src="../images/aboutus.jpg" alt="greek statue" />
         <p id="caption">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus
@@ -31,8 +31,8 @@
           aspernatur repudiandae magni amet fugit! Ab quisquam explicabo nisi
           eum debitis quis, accusantium.
         </p>
-      </div>
-    </article>
+      </article>
+    </section>
 
     <hr style="width: 86%" />
 
