--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -21,16 +21,16 @@
     </header>
 
     <h4 id="star-caption">Tourist Reviews</h4>
-    <article id="review-stars">
+    <section id="review-stars">
       <span class="fa fa-star checked fa-2x"></span>
       <span class="fa fa-star checked fa-2x"></span>
       <span class="fa fa-star checked fa-2x"></span>
       <span class="fa fa-star checked fa-2x"></span>
       <span class="fa fa-star checked fa-2x"></span>
-    </article>
+    </section>
     <hr style="width: 86%" />
 
-    <article id="reviews">
+    <section id="reviews">
       <div class="review-card">
         <div class="review-pfp">
           <img
@@ -166,7 +166,7 @@
       </div>
       <hr style="width: 80%" />
       
-    </article>
+    </section>
 
     <hr style="width: 86%" />
 
