--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -43,7 +43,7 @@
       <input type="text" id="e-mail" name="e-mail" /><br />
       <label for="message">Message:</label><br />
       <input type="text" id="message" name="message" /><br />
-      <input type="submit" value="Submit" />
+      <input id="contact-btn" type="submit" value="Submit" />
     </form>
     <hr style="width: 86%" />
     <footer>
