adjusted media query for smaller devices

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="landing2">
       <h3 id="landing2-title">Popular Attractions</h3>
       <div id="popular-container">
-        <div class="landing2-item">
+        <div class="landing2-item" id="landing2-item1">
           <img
             class="landing2-img"
             src="images/item1.jpg"
@@ -57,7 +57,7 @@
             </p>
           </div>
         </div>
-        <div class="landing2-item">
+        <div class="landing2-item" id="landing2-item2">
           <img
             class="landing2-img"
             src="images/item2.jpg"
