hover shadow effect to header title and links

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <header>
-      <h2>Lorem Ipsum</h2>
-      <a href="index.html">Home</a>
-      <a href="pages/aboutus.html">About Us</a>
-      <a href="pages/reviews.html">Reviews</a>
-      <a href="pages/contactus.html">Contact Us</a>
+      <h2 class="hvr-bob hvr-float-shadow">Lorem Ipsum</h2>
+      <a class="hvr-bob hvr-float-shadow" href="index.html">Home</a>
+      <a class="hvr-bob hvr-float-shadow" href="pages/aboutus.html">About Us</a>
+      <a class="hvr-bob hvr-float-shadow" href="pages/reviews.html">Reviews</a>
+      <a class="hvr-bob hvr-float-shadow" href="pages/contactus.html">Contact Us</a>
     </header>
 
     <section id="landing">
