--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <header>
-      <h2>Lorem Ipsum</h2>
-      <a href="../index.html">Home</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="reviews.html">Reviews</a>
-      <a href="contactus.html">Contact Us</a>
+      <h2 class="hvr-bob hvr-float-shadow">Lorem Ipsum</h2>
+      <a class="hvr-bob hvr-float-shadow"href="../index.html">Home</a>
+      <a class="hvr-bob hvr-float-shadow"href="aboutus.html">About Us</a>
+      <a class="hvr-bob hvr-float-shadow"href="reviews.html">Reviews</a>
+      <a class="hvr-bob hvr-float-shadow"href="contactus.html">Contact Us</a>
     </header>
 
     <section id="aboutUs-article">
