--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <header>
-      <h2>Lorem Ipsum</h2>
-      <a href="../index.html">Home</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="reviews.html">Reviews</a>
-      <a href="contactus.html">Contact Us</a>
+      <h2 class="hvr-bob hvr-float-shadow">Lorem Ipsum</h2>
+      <a class="hvr-bob hvr-float-shadow"href="../index.html">Home</a>
+      <a class="hvr-bob hvr-float-shadow"href="aboutus.html">About Us</a>
+      <a class="hvr-bob hvr-float-shadow"href="reviews.html">Reviews</a>
+      <a class="hvr-bob hvr-float-shadow"href="contactus.html">Contact Us</a>
     </header>
 
     <h4 id="star-caption">Tourist Reviews</h4>
