added icons to contact page

--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
     <link rel="stylesheet" href="../style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+
     <script src="../script.js" defer></script>
   </head>
   <body>
     <header>
       <h2 class="hvr-bob hvr-float-shadow">Lorem Ipsum</h2>
-      <a class="hvr-bob hvr-float-shadow"href="../index.html">Home</a>
-      <a class="hvr-bob hvr-float-shadow"href="aboutus.html">About Us</a>
-      <a class="hvr-bob hvr-float-shadow"href="reviews.html">Reviews</a>
-      <a class="hvr-bob hvr-float-shadow"href="contactus.html">Contact Us</a>
+      <a class="hvr-bob hvr-float-shadow" href="../index.html">Home</a>
+      <a class="hvr-bob hvr-float-shadow" href="aboutus.html">About Us</a>
+      <a class="hvr-bob hvr-float-shadow" href="reviews.html">Reviews</a>
+      <a class="hvr-bob hvr-float-shadow" href="contactus.html">Contact Us</a>
     </header>
 
     <h4 id="contact-title">Contact Us</h4>
@@ -25,9 +30,9 @@
     <section id="contact-landing">
       <div id="contact-info">
         <div id="contact-icon">
-          <span>location</span>
-          <span>phone</span>
-          <span>email</span>
+          <span class="material-symbols-outlined"> pin_drop </span>
+          <span class="material-symbols-outlined"> call </span>
+          <span class="material-symbols-outlined"> mail </span>
         </div>
         <div id="contact-icon-info">
           <p>some address</p>
