removed animations from title of each page

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h2 class="hvr-bob hvr-float-shadow">Lorem Ipsum</h2>
+      <h2>Lorem Ipsum</h2>
       <a class="hvr-bob hvr-float-shadow"href="../index.html">Home</a>
       <a class="hvr-bob hvr-float-shadow"href="aboutus.html">About Us</a>
       <a class="hvr-bob hvr-float-shadow"href="reviews.html">Reviews</a>
